client/sass/layout/_home.scss
$scaleMultiple: 2;
$openSpaceDuration: 1s;

body {
    
    section.container {
        background-color: $colorBackground;
        
        > header {
            
            h1.logo {
                position: fixed;
                margin-left: 0;
                @include transition(margin-left $openSpaceDuration $defaultCurve);
                
                &.hidden {
                    margin-left: -$col;
                    
                }
            }
            
            h1.headerSpaceName {
                position: absolute;
                top: $baseline/2.3333;
                width: 33.333333vw;
                left: 50vw;
                margin-left: -16.6666667vw;
                padding-left: 1pt;
                text-align: center;
            }
            
            a.back {
                font-size: $typeHeaderSize * 1.5;
                padding: 1em;
                position: relative;
                top: -.125em;
                left: -1em;
                margin-left: 0;
                @include transition(margin-left $openSpaceDuration $defaultCurve);

                &.hidden, &.hidden:hover {
                    margin-left: -$col;
                }
                
                &:hover {
                    margin-left: $gutter;
                }
            }
        }
    
        section.space.metaspace {
//             height: 100vh * $scaleMultiple;
            width:  100vw;
//             overflow: scroll;
//             position: absolute;
//             top:  -(100vh * $scaleMultiple) * $scaleMultiple;
//             left: -(100vw * $scaleMultiple) / 4;
            -webkit-transform-origin: center center;
                    transform-origin: center center;
            @include transition($openSpaceDuration linear);
            @include transition-property(transform,
                                 -webkit-transform,
                                    -moz-transform);
                                    
            &.closed {
                > section.content {
                     @include transform(scale3d(1 / $scaleMultiple, 1 / $scaleMultiple, 1), 1.0);
                }
            }
    
            > section.content {
                text-align: center;
//                 position: absolute;
//                 overflow: scroll;
                cursor: -webkit-zoom-out;
//                 height: 400vh * $scaleMultiple;
//                 width:  100vw * $scaleMultiple;
//                 padding-top: 150vh * $scaleMultiple;
//                 top: -100vh * $scaleMultiple;
                top: 0;
                left: 0;
                -webkit-transform-origin: top center;
                        transform-origin: top center;
                @include transition($openSpaceDuration $defaultCurve);
                @include transition-property(transform,
                                     -webkit-transform,
                                        -moz-transform);
                
                div.spacePreview {
                    position: relative;
                    display: inline-block;
                    @include transition(.25s $defaultCurve);
                    @include transition-property(transform,
                                         -webkit-transform,
                                            -moz-transform,
                                            box-shadow);
                    height: 100vh;
                    width:  100vw;
                    -webkit-transform-origin: center center;
                            transform-origin: center center;
                    background-repeat: no-repeat;
                    background-size: cover;
                    background-position: center center;
                    background-color: $colorBackground;
                    cursor: pointer;
                    z-index: 1;
                    border: $cardBorder;
                    border-width: $cardBorderWidth * $scaleMultiple;
                    margin-top:  -$cardBorderWidth * $scaleMultiple;
                    margin-left: -$cardBorderWidth * $scaleMultiple;
//                     margin: $col/2 $col/2;
                    @include transform(scale3d(1.0, 1.0, 1.0));
                    
                    &:last-of-type {
//                         margin-bottom: 900vh;
                    }
                    
                    &:hover:not(.open) {
                        border-color: $colorAccent !important;
                                            -webkit-transform-origin: center center;
                        color: $colorAccent;
//                         @include transform(scale3d(1.125, 1.125, 1.0));
//                         @include box-shadow($gutter * $scaleMultiple $gutter * $scaleMultiple 0 $cardBoxShadowColor);

                        h1.spaceName span {
                            @include transform(scale3d(0.89, 0.89, 1.0));
                        }
                    }
                    
                    &.add {
                        border-style: dashed;
                        
                        &.open {
                            h1.spaceName {
                                opacity: 1;
                            }
                        }

                        &:after {
                            content: "+";
                            font-weight: $fontWeightLight;
                            font-size: $typeBodySize * 12;
                            line-height: 1em;
                            position: absolute;
                            height: 100%;
                            width:100%;
                            top: 36%;
                            right: 0;
                            left: 0;
                            display: block;
                        }
                        
                        h1.spaceName {
                            opacity: 0;
                        }
                    }

                    h1.spaceName {
                        position: absolute;
                        padding-top: ($gutter/4) * $scaleMultiple;
                        cursor: default;
                        text-transform: lowercase;
                        top: 0;
                        left: 50%;
                        margin-left: -50vw;
                        width: 100vw;
                        z-index: 200;
                        text-align: center;
                        @include typeHeader;
                        font-size: $typeHeaderSize * $scaleMultiple;
                        @include transform(scale3d(1.0, 1.0, 1.0) translate3d(0px, 0px, 0px));
                        -webkit-transform-origin: top center;
                                transform-origin: top center;
                        @include transition($openSpaceDuration $defaultCurve);
                        @include transition-property(transform,
                                             -webkit-transform,
                                                -moz-transform,
                                                     opacity);
                        
                        span { // so that h1 can have multiple timing curves for different UI states
                            display: block;
                            -webkit-transform-origin: bottom center;
                                    transform-origin: bottom center;
                            @include transform(scale3d(1.0, 1.0, 1.0));
                            @include transition(.25s $defaultCurve);
                            @include transition-property(transform,
                                                 -webkit-transform,
                                                    -moz-transform);
                        }
                    }
    
                    &.open {
//                         @include transform(scale3d(1.0, 1.0, 1.0)/*  translate3d(-$cardBorderWidth * $scaleMultiple, -$cardBorderWidth * $scaleMultiple, 0px) */);
    //                     border-width: 0;
                        z-index: 2;
                        
                        &:hover {
                            color: $colorType;
                        }
                        
                        h1.spaceName {
                            @include transform(scale3d(1/$scaleMultiple, 1/$scaleMultiple, 1.0) translate3d(0px, 0px, 0px));
                            
                            span {
                                @include transform(scale3d(1.0, 1.0, 1.0));
                            }
                        }
                        
                        iframe.spaceFrame {
                            opacity: 1;
                            @include transition-delay(.5s);
                        }
                    }
                    
                    &.hidden {
    //                     opacity: 0;
    //                     @include transition-timing-function(linear);
                    }
                    
                    iframe.spaceFrame {
                        @include transition(all 2s $defaultCurve 0s);
                        opacity: 0;
                        position: absolute;
                        top: 0;
                        left: 0;
                        height: 100vh;
                        width: 100vw;
                        background-color: $colorBackground;
                        z-index: 100;
                    }
                }
            }
        }
    }    
}

